--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/moment": "^2.11.29",
     "antd": "^5.24.5",
     "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
     "my-project": "file:",
     "next": "15.2.4",
     "postcss": "^8.5.3",
