--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.6.1",
     "@types/moment": "^2.11.29",
-    "antd": "^5.24.5",
+    "antd": "^5.26.7",
+    "axios": "^1.11.0",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "my-project": "file:",
