--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "file-saver": "^2.0.5",
+    "firebase": "^12.1.0",
     "moment": "^2.30.1",
     "my-project": "file:",
     "next": "15.2.4",
