--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase": "^12.1.0",
     "moment": "^2.30.1",
     "my-project": "file:",
-    "next": "15.2.4",
+    "next": "^16.1.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
